# play-rust

./: README.md
.github/workflows/: codecov.yaml
actix-actors-ping-ponh/: Cargo.toml
actix-actors-ping-ponh/src/: main.rs
actor-fut/: Cargo.toml
actor-fut/src/: main.rs
ipipe_playround/: Cargo.toml
ipipe_playround/src/: main.rs
pfactory/: Cargo.toml
pfactory/src/: main.rs
rbe/section1/: 11_helloworld  11_helloworld.rs  122_display  122_display.rs  122_tc_list  122_tc_list.rs  123_formatting  123_formatting.rs  12_fmp_debug  12_fmp_debug.rs  12_fmp_debug2  12_fmp_debug2.rs  12_formattedprint  12_formattedprint.rs
rbe/section2/: 21_literals  21_literals.rs  22_tuples  22_tuples.rs  23_arr_slices  23_arr_slices.rs
rbe/section5/: 53_inference.rs
test-borsh/: Cargo.toml
test-borsh/src/: main.rs
waytoodeep/: Cargo.toml
waytoodeep/src/: dumb.rs  main.rs
