[package]
name = "waytoodeep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.0"
reqwest = { version = "0.11.4", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = {version = "0.3.6", features = ["env-filter"] }
